--- a/Desktop/website (matcha)/firebase.json
+++ b/Desktop/website (matcha)/firebase.json
@@ -1,5 +1,6 @@
 {
   "hosting": {
+    "site": "matcha-beyond",
     "public": ".",
     "ignore": [
       "firebase.json",
@@ -14,3 +15,5 @@
     ]
   }
 }
+
+
