--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Firebase Hosting
+name: Firebase Deploy
 
 on:
   push:
@@ -10,9 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - run: npm install -g firebase-tools
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
 
-      - run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
+      # If your project needs a build step, uncomment these lines:
+      # - name: Install dependencies
+      #   run: npm install
+      #
+      # - name: Build project
+      #   run: npm run build
+
+      - name: Deploy to Firebase Hosting
+        run: firebase deploy --only hosting --project matcha-beyond --token ${{ secrets.FIREBASE_TOKEN }}
+
 
