--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -1,4 +1,4 @@
-name: Firebase Deploy
+name: Deploy to Firebase Hosting
 
 on:
   push:
@@ -10,25 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '16'
 
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
+      - run: npm install -g firebase-tools
 
-      # If your project needs a build step, uncomment these lines:
-      # - name: Install dependencies
-      #   run: npm install
-      #
-      # - name: Build project
-      #   run: npm run build
+      # If you don’t have a build step, comment the next two lines:
+      - run: npm install
+      - run: npm run build
 
-      - name: Deploy to Firebase Hosting
-        run: firebase deploy --only hosting --project matcha-beyond --token ${{ secrets.FIREBASE_TOKEN }}
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MATCHA_BEYOND }}
+          projectId: matcha-beyond
+
+
+
 
 
